# conan_gcc_example

./: CMakeLists.txt  conanfile.py  host-profile  setup.sh
recipes/gcc/: conanfile.py
