cmake_minimum_required(VERSION 3.15)
project(conan_gcc_example CXX)

find_package(ZLIB REQUIRED)

add_executable(${PROJECT_NAME} src/main.cpp)
target_link_libraries(${PROJECT_NAME} ZLIB:ZLIB)

install(TARGETS conan_gcc_example DESTINATION "."
        RUNTIME DESTINATION bin
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        )
